Change project references after cloning

--- a/Opengl230802.vcxproj
+++ b/Opengl230802.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{f5edc6e6-0295-43b5-ab22-e6ab7584f0fe}</ProjectGuid>
-    <RootNamespace>OpenglStart3</RootNamespace>
+    <RootNamespace>Opengl230802</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\dev\VSDev\OpenglStart3;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\dev\VSDev\OpenglStart3\libs;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\dev\tnuss\Opengl230802\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\dev\tnuss\Opengl230802\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -122,7 +122,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\dev\VSDev\OpenglStart3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\dev\tnuss\Opengl230802\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
