--- a/Opengl230802.vcxproj.filters
+++ b/Opengl230802.vcxproj.filters
@@ -1320,6 +1320,9 @@
     <ClCompile Include="src\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="headers\LineExamples.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="libs\glfw3.lib" />
