--- a/Opengl230802.vcxproj.filters
+++ b/Opengl230802.vcxproj.filters
@@ -1306,6 +1306,8 @@
     <None Include="docs\OpenGL-VisStudioConfig.docx" />
     <None Include="resources\shader.frag" />
     <None Include="resources\shader.vert" />
+    <None Include="resources\Shdr-Cube.vert" />
+    <None Include="resources\Shdr-Cube.frag" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\glm\detail\glm.cpp">
