DoAxis work. Draws a rotating set pf x,y,z  axises.

--- a/Opengl230802.vcxproj
+++ b/Opengl230802.vcxproj
@@ -589,6 +589,8 @@
     </None>
     <None Include="resources\Shdr-Cube.frag" />
     <None Include="resources\Shdr-Cube.vert" />
+    <None Include="resources\XYZLines.frag" />
+    <None Include="resources\XYZLines.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\glm\detail\glm.cpp" />
