--- a/Opengl230802.vcxproj.filters
+++ b/Opengl230802.vcxproj.filters
@@ -1308,6 +1308,8 @@
     <None Include="resources\shader.vert" />
     <None Include="resources\Shdr-Cube.vert" />
     <None Include="resources\Shdr-Cube.frag" />
+    <None Include="resources\XYZLines.frag" />
+    <None Include="resources\XYZLines.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="include\glm\detail\glm.cpp">
