--- a/Opengl230802.vcxproj
+++ b/Opengl230802.vcxproj
@@ -580,6 +580,8 @@
     <None Include="include\glm\gtx\wrap.inl" />
     <None Include="include\glm\out\build\x64-Debug\CMakeFiles\3.20.21032501-MSVC_2\CMakeDetermineCompilerABI_C.bin" />
     <None Include="include\glm\out\build\x64-Debug\CMakeFiles\3.20.21032501-MSVC_2\CMakeDetermineCompilerABI_CXX.bin" />
+    <None Include="resources\CubePerspect.frag" />
+    <None Include="resources\CubePerspect.vert" />
     <None Include="resources\shader.frag">
       <DeploymentContent>true</DeploymentContent>
       <FileType>CppCode</FileType>
