--- a/Opengl230802.vcxproj
+++ b/Opengl230802.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="headers\mesh.h" />
     <ClInclude Include="headers\shader.h" />
     <ClInclude Include="headers\texture.h" />
     <ClInclude Include="include\glad\glad.h" />
@@ -598,6 +599,7 @@
     <ClCompile Include="include\glm\detail\glm.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\shader.cpp" />
     <ClCompile Include="src\stb.cpp" />
     <ClCompile Include="src\texture.cpp" />
